--- a/12. DOM/115. Introduction to DOM/index.html
+++ b/12. DOM/115. Introduction to DOM/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
 
-    <h1>Hello</h1>
+    <h1 id="title">Hello</h1>
 
     <input type="checkbox">
 
-    <button style=":active color:red;">Click Me</button>
+    <button class="BTN">Click Me</button>
 
     <ul>
       <li class="list">
